[package]
name = "ttn_http_backend"
version = "0.1.0"
authors = ["Simon Struck <simon@simonscode.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
base64 = "0.12.3"
confy = "0.4.0"

[dependencies.reqwest]
version = "0.10.7"
features = ["json"]

[dependencies.tokio]
version = "0.2.21"
features = ["macros"]

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]

[dependencies.serde]
version = "1.0.114"
features = ["derive"]
